--- a/frontend/src/components/MHAssessment.css
+++ b/frontend/src/components/MHAssessment.css
@@ -1,6 +1,6 @@
 .mh-container {
   padding: 2rem;
-  background-color: #f3f4f6;
+  background-color: #fff;
   min-height: 100vh;
   display: flex;
   justify-content: center;
